siduxcc (0.9.29) UNRELEASED; urgency=low

  * NOT RELEASED YET

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 16 Mar 2008 15:17:20 +0100

siduxcc (0.9.28) unstable; urgency=low

  [ Joaquim Boura ]
  * fr translations of siduxcckde actualized. thks to Alpha Diakite (alphad) &
    sidux.fr team

  [ Stefan Lippers-Hollmann ]
  * fix po syntax errors.
  * relibtoolize.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 16 Mar 2008 15:11:22 +0100

siduxcc (0.9.27) unstable; urgency=low

  * hermes: new and kernel tab added
  * kde: software: tooltips added
  * kde: network: qwhatsthis added
  * icons: hermes icons updated
  * hermes: legend updated

 -- Fabian Wuertz <xadras@sidux.com>  Fri, 14 Mar 2008 23:23:08 +0100

siduxcc (0.9.26) unstable; urgency=low

  [ Bernard Gray ]
  * begin work on a new hermes upgrade-ok icon 
  * add new upgrade-warning candidate icon
  * tweak upgrade-ok candidate icon
  * add another upgrade-ok and warning candidate 
  * make sidux-warning5 bg grayscale to enhance warning effect 

  [ Fabian Wuertz ]
  * translation: de: hermes: updated 

 -- Bernard Gray <bernard.gray@gmail.com>  Fri, 14 Mar 2008 01:04:59 +1100

siduxcc (0.9.25) unstable; urgency=low

  * kde: services: descriptions added  
  * hermes: duWarningsDe fixed 

 -- Fabian Wuertz <xadras@sidux.com>  Thu, 13 Mar 2008 00:54:32 +0100

siduxcc (0.9.24) unstable; urgency=low

  [ Bernard Gray ]
  * add hermes notification icon candidate - warning
  * add hermes notification icon candidate - safe

  [ Fabian Wuertz ]
  * cli: url of the kernel package updated

 -- Fabian Wuertz <xadras@sidux.com>  Wed, 12 Mar 2008 00:10:56 +0100

siduxcc (0.9.23) unstable; urgency=low

  [ Fabian Wuertz ]
  * empty icons folders removed
  * kde: software: asv check updated
  * cli: atl2 bug fixed
  * kde: kernel: descriptions for modules added
  * debian: rules file fixed
  * translation: pt fixed

  [ Joaquim Boura ]
  * fixed fr translation. thanks to alphad. 