@@ -76,17 +76,17 @@ create-icons::
 	# create siduxcc status icons
 	inkscape --export-width=22 \
 		 --export-height=22 \
-		 --export-png="$(CURDIR)/icons/ok-hermes.png" \
+		 --export-png="$(CURDIR)/icons/icons/ok-hermes.png" \
 		 	"$(CURDIR)/icons/icons/ok-hermes.svg"
 	test -r "$(CURDIR)/icons/icons/ok-hermes.svg"
-	test -r "$(CURDIR)/icons/ok-hermes.png"
+	test -r "$(CURDIR)/icons/icons/ok-hermes.png"
 	
 	inkscape --export-width=22 \
 		 --export-height=22 \
-		 --export-png="$(CURDIR)/icons/notok-hermes.png" \
+		 --export-png="$(CURDIR)/icons/icons/notok-hermes.png" \
 		 	"$(CURDIR)/icons/icons/notok-hermes.svg"
 	test -r "$(CURDIR)/icons/icons/notok-hermes.svg"
-	test -r "$(CURDIR)/icons/notok-hermes.png"
+	test -r "$(CURDIR)/icons/icons/notok-hermes.png"
 	
 	@echo "all PNGs created successfully."
 
