@@ -56,6 +56,11 @@ function stableKernelFull()
 	wget -U "siduxcc-hermes" -O - http://sidux.com/debian/pool/main/l/linux-sidux-2.6/ 2>/dev/null | grep -m 3 "linux-image" | tail -n 1 | cut -f3-5 -d"-"
 }
 
+function stableKernel3()
+{
+	wget -U "siduxcc-hermes" -O - http://sidux.com/debian/pool/main/l/linux-sidux-2.6/ 2>/dev/null | grep -m 3 "linux-image" | tail -n 1 | cut -f3-6 -d"-" | cut -f1 -d_
+}
+
 function experimentalKernel()
 {
 	TMP="$(mktemp -p /tmp/ experimentalKernel-XXXXXXXXXX)"
@@ -73,10 +78,12 @@ installKernel()
 {
 	# $1: type, stable, experimental
 
+	tmp=$(stableKernel3)
+
 	case $1 in
 			stable)
 				apt-get update
-				apt-get install linux-image-2.6-sidux-686 linux-headers-2.6-sidux-686
+				apt-get install -s linux-image-$tmp linux-headers-$tmp
 				;;
 			experimental) echo "na";;
 	esac
